--- a/servico3.html
+++ b/servico3.html
@@ -135,7 +135,7 @@
     <footer class="py-5 corAutoPeca">
         <div class="container">
             <p class="m-0 text-center text-white">
-                Copyright &copy; - Auto Peças MRM
+                Copyright &copy; - Auto Peças MRM - 2024
             </p>
         </div>
     </footer>
